--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@kyleshockey/object-assign-deep": "^0.4.2",
     "@kyleshockey/xml": "^1.0.2",
     "antd": "^3.26.12",
+    "babel-plugin-import": "^1.13.0",
     "base64-js": "^1.2.0",
     "classnames": "^2.2.6",
     "core-js": "^2.5.1",
@@ -63,6 +64,7 @@
     "immutable": "^3.x.x",
     "js-file-download": "^0.4.1",
     "js-yaml": "^3.13.1",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "memoizee": "^0.4.12",
     "prop-types": "^15.7.2",
@@ -81,6 +83,7 @@
     "reselect": "^2.5.4",
     "serialize-error": "^2.1.0",
     "sha.js": "^2.4.11",
+    "style-loader": "^1.1.3",
     "swagger-client": "^3.10.0",
     "url-parse": "^1.4.7",
     "xml-but-prettier": "^1.0.1",
@@ -107,7 +110,7 @@
     "chromedriver": "^2.38.3",
     "copy-webpack-plugin": "^5.1.1",
     "cors": "^2.8.5",
-    "css-loader": "^3.1.0",
+    "css-loader": "^3.4.2",
     "cypress": "^3.4.1",
     "dedent": "^0.7.0",
     "deepmerge": "^2.1.0",
@@ -144,7 +147,7 @@
     "react-test-renderer": "^15.5.4",
     "release-it": "^12.3.4",
     "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "selenium-server-standalone-jar": "^3.141.5",
     "source-map-support": "^0.5.12",
     "standard": "^11.0.1",
